--- a/各浏览器内核的区别.md
+++ b/各浏览器内核的区别.md
@@ -1,55 +1,95 @@
 #各浏览器内核的区别
 
->浏览器内核：英文叫做Rendering Engine，顾名思义，就是用来渲染网页内容的，将网页的代码转换为最终你看得见的页面。因为是排版，所以肯定会排版错位等问题。为什么会排版错位呢？有的是由于网站本身编写不规范，有的是由于浏览器本身的渲染不标准。
+>浏览器内核：英文叫做Rendering Engine，顾名思义，就是浏览器中最核心的部分。
 
 
 
-###下面罗列一下几款主流的排版引擎和浏览器
+###下面罗列一下几款主流的浏览器内核
 
 ***
 
-* 1 Trident 内核（Windows）
+* 1 国外
 
-  Trident 就是大名鼎鼎的IE浏览器所使用的内核，也是很多浏览器所使用的内核，通常被称为IE内核。基于Trident内核的浏览器非常多，这是因为Trident内核提供了丰富的调用接口。老的Trident内核（比如常说的IE6内核）一直是不遵循W3C标准的，但是由于当时IE6的市场份额最大，所以后果就是大量的网页专门为IE6等老Trident内核编写，在IE6下显示很正常，但其实这些网页的代码并不符合W3C标准，于是，完全依据W3C标准写的网页在老的Trident内核下面又出现偏差，这就是为什么很多人觉得后来的IE9的网页排版有时会乱了，而IE6则正常，其实不是浏览器兼容性差了，而是你访问的网页不符合新的标准。目前可供调用的最新版的Trident内核是IE9所用的内核，相较之前的版本对W3C标准的支持增强了很多。
-
-  Trident内核的常见浏览器有：
-
-| IE6  |     IE7     | IE8（Trident 4.0） | IE10（Trident 6.0） |
-| :--: | :---------: | :--------------: | :---------------: |
-| 世界之窗 |  360安全浏览器   |        傲游        |       搜狗浏览器       |
-| 腾讯TT | 阿云浏览器（早期版本） |   百度浏览器（早期版本）    |      瑞星安全浏览器      |
-其中部分浏览器的新版本是“双核”甚至是“多核”，其中一个内核是Trident，然后再增加一个其他内核。国内的厂商一般把其他内核叫做“高速浏览模式”，而Trident则是“兼容浏览模式”，用户可以来回切换。
+  |   浏览器   |         内核         |    编程语言     |                   操作系统                   |        特点        |
+  | :-----: | :----------------: | :---------: | :--------------------------------------: | :--------------: |
+  | Chrome  |       Blink        |     C++     |      Windows/Linux/OS X/Android/iOS      |    方便性低、资源占较高    |
+  | Firefox | Gecko/SpiderMonkey |     C++     | Windows/Linux/OS X/Android/iOS/Firefox OS | 插件功能很强大、 制定插件很麻烦 |
+  | Safari  |    WebKit/Nitro    | Objective-C |                 OS X/iOS                 |      流畅、资源低      |
+  |  Opera  |       Presto       |     C++     |            Windows/Linux/OS X            |     与众不同、不模仿     |
+  |   IE    |   Trident/Chakra   |     C++     |        Windows/OS X/Solaris/HP-UX        |     速度慢、安全性低     |
 
 
 
-* 2 Gecko（跨平台）
+* 2 国内
 
-  Netscape6 启用的内核，现在主要由Mozilla基金会进行维护，是开源的浏览器内核，目前最主流的Gecko内核浏览器是Mozilla Firefox，所以也常常称之为火狐内核。因为Firefox的出现，IE的霸主地位逐步被削弱，Chrome的出现则是加速了这个进程。非Trident内核的兴起正在改变着整个互联网，最直接的就是推动了编码的标准化，也使得微软在竞争压力下不得不改进IE。不过比较可惜的是，虽然是开源的，也开发了这么多年，基于Gecko的浏览器并不多见。
-
-  ​
-
-
-
-* 3 KHTML（Linux）
-
-  KDE开发的内核，速度快捷，容错度低。这个内核可能不见得很多人知道，但是后面再看下去你就明白了。常见的KHTML内核的浏览器：Konqueror
+  |  浏览器   |       内核       | 编程语言 |           操作系统            |  特点  |
+  | :----: | :------------: | :--: | :-----------------------: | :--: |
+  | 360浏览器 | Trident/Blink  | C++  |          Windows          | 广告多  |
+  | QQ浏览器  | WebKit/Trident | C++  | Windows/OS X/Android/iOS/ | 广告多  |
+  | 百度浏览器  | Blink/Trident  | C++  |    Windows/Android/iOS    | 广告多  |
+  | UC浏览器  |      U3内核      | C++  |    Windows/Android/iOS    | 广告多  |
 
   ​
 
-* 4 WebKit（跨平台）
+  *国内的主流浏览器均采用国外浏览器的主流内核或者基于国外浏览器内核进行开发（如UC浏览器）
 
-  由KHTML发展而来，也是苹果给开源世界的一大贡献。常见的WebKit内核的浏览器：Apple Safari (Win/Mac/iPhone/iPad)、Symbian手机浏览器、Android 默认浏览器。
+  *国内的主流浏览器适合国内绝大多数用户需求，且对中文网站的兼容性好
 
-  ​
+***
 
 
 
-* 5 Chromium（跨平台）
+####Blink内核
 
-  Chromium把WebKit的代码梳理得可读性提高很多，所以以前可能需要一天进行编译的代码，现在只要两个小时就能搞定。常见的Chromium内核的浏览器：Google Chrome、Chromium、SRWare Iron、Comodo Dragon
+Blink内核代表产品Chrome，针对Webkit内核，做了很多的修订和精简，去掉了很多没用的复杂代码，让效率更高。然后针对未来的网页格式，做了进一步优化和效率提升的处理。
 
-  ​
 
-* Presto（跨平台）
 
-  Opera 所采用的内核，Presto优先解析文字，保证可阅读性，媒体资源的渲染放后。常见的Presto内核的浏览器：Opera
+####Gecko内核（跨平台）
+
+Gecko内核代表产品Firefo, FirefoxGecko是一套开放源代码的、以C++编写的网页排版引擎。代码完全公开，因此，其可开发程度很高，全世界的程序员都可以为其编写代码，增加功能。
+
+
+
+####Trident内核
+
+Trident内核代表产品Internet Explorer，又称其为IE内核。专门为老Trident内核编写的网页代码并不符合w3c标准，于是完全符合w3c标准的网页在老Trident内核下出现偏差，目前可供调用的最新版的Trident内核是IE9使用的内核，较之前的版本对w3c的标准支持增了很多
+
+
+
+####Presto（跨平台）
+
+Presto内核代表产品Opera，Presto内核对w3c的支持良好，对页面文字的解析方面的性能比webkit还要高，对页面有较高的阅读性。
+
+
+
+####WebKit内核（跨平台）
+
+WebKit内核代表产品Safari，包含了来自KDE项目和苹果公司的一些组件，主要用于Mac OS系统，它的特点在于源码结构清晰、渲染速度极快。缺点是对网页代码的兼容性不高，导致一些编写不标准的网页无法正常显示。
+
+
+
+
+
+
+
+>参考资料：
+>
+>（1）https://zh.wikipedia.org/wiki/Google_Chrome
+>
+>（2）https://zh.wikipedia.org/wiki/Internet_Explorer
+>
+>（3）https://zh.wikipedia.org/wiki/Opera
+>
+>（4）https://zh.wikipedia.org/wiki/Safari
+>
+>（5）https://zh.wikipedia.org/wiki/Firefox
+>
+>（6）https://zh.wikipedia.org/wiki/360%E5%AE%89%E5%85%A8%E6%B5%8F%E8%A7%88%E5%99%A8
+>
+>（7）https://zh.wikipedia.org/wiki/QQ%E6%B5%8F%E8%A7%88%E5%99%A8
+>
+>（8）https://zh.wikipedia.org/wiki/%E7%99%BE%E5%BA%A6%E6%B5%8F%E8%A7%88%E5%99%A8
+>
+>（9）http://blog.csdn.net/lanonola/article/details/51569025
+
