--- a/各浏览器内核的区别.md
+++ b/各浏览器内核的区别.md
@@ -1,10 +1,10 @@
-#各浏览器内核的区别
+#                         各浏览器内核的区别
 
 >浏览器内核：英文叫做Rendering Engine，顾名思义，就是浏览器中最核心的部分。
 
 
 
-###下面罗列一下几款主流的浏览器内核
+###几款主流浏览器的简单介绍
 
 ***
 
@@ -41,31 +41,31 @@
 
 ####Blink内核
 
-Blink内核代表产品Chrome，针对Webkit内核，做了很多的修订和精简，去掉了很多没用的复杂代码，让效率更高。然后针对未来的网页格式，做了进一步优化和效率提升的处理。
+Blink内核的代表产品Chrome，针对Webkit内核，做了很多的修订和精简，去掉了很多没用的复杂代码，让效率更高；然后针对未来的网页格式，做了进一步优化和效率提升的处理。
 
 
 
 ####Gecko内核（跨平台）
 
-Gecko内核代表产品Firefo, FirefoxGecko是一套开放源代码的、以C++编写的网页排版引擎。代码完全公开，因此，其可开发程度很高，全世界的程序员都可以为其编写代码，增加功能。
+Gecko内核的代表产品Firefox, Gecko是一套开放源代码的、以C++编写的网页排版引擎。代码完全公开，因此，其可开发程度很高，全世界的程序员都可以为其编写代码，增加功能。
 
 
 
 ####Trident内核
 
-Trident内核代表产品Internet Explorer，又称其为IE内核。专门为老Trident内核编写的网页代码并不符合w3c标准，于是完全符合w3c标准的网页在老Trident内核下出现偏差，目前可供调用的最新版的Trident内核是IE9使用的内核，较之前的版本对w3c的标准支持增了很多
+Trident内核的代表产品Internet Explorer，又称其为IE内核。在以前，专门为老Trident内核编写的网页代码不符合w3c标准，于是完全符合w3c标准的网页在老Trident内核下会出现偏差，目前可供调用的最新版的Trident内核是IE9使用的内核，较之前的版本对w3c的标准支持增了很多。
 
 
 
 ####Presto（跨平台）
 
-Presto内核代表产品Opera，Presto内核对w3c的支持良好，对页面文字的解析方面的性能比webkit还要高，对页面有较高的阅读性。
+Presto内核的代表产品Opera，Presto内核对w3c的支持良好，对页面文字的解析方面的性能比Webkit还要高，使得页面有较高的阅读性。
 
 
 
 ####WebKit内核（跨平台）
 
-WebKit内核代表产品Safari，包含了来自KDE项目和苹果公司的一些组件，主要用于Mac OS系统，它的特点在于源码结构清晰、渲染速度极快。缺点是对网页代码的兼容性不高，导致一些编写不标准的网页无法正常显示。
+WebKit内核的代表产品Safari，包含了来自KDE项目和Apple公司的一些组件，主要用于Mac OS系统，它的特点在于源码结构清晰、渲染速度极快。缺点是对网页代码的兼容性不高，导致一些编写不标准的网页无法正常显示。
 
 
 
